added change dimensions functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <div id="grid-container">
-
-    </div>
+    <div id="grid-container"></div>
+    <button id="change-dimensions-button">change dimensions</button>
     <script src="./script.js"></script>
 </body>
 
